--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 body {
 
-    background-image: url(./images/cover.jpg);
+    background-image: url(../images/cover.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100vw;
